# Lusitania

./: README.md  index.md
.github/scripts/land_registry/: README.md  main.py  models.py  pyproject.toml
.github/workflows/: update_land_registry.yml
land_registry/lambat city/: Lambat City.json  Pioneer_District.json
land_registry/portucale/: portucale.json
laws/: Establishment_of_Lusitan_Arts_Endowment_Act.md  The_Invasive_Species_Act.md
