[project]
name = "land-registry"
version = "0.1.0"
description = "Manages the land and updates the civwiki"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kaleido>=1.1.0",
    "mwclient>=0.11.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pydantic>=2.12.3",
    "pytablewriter>=1.2.1",
    "wikitextparser>=0.56.4",
]
